[package]
name = "pqtl-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
description = "Core types, trust-boundary traits, transparency log and client receipt verifier (M0: placeholder crypto)."

[dependencies]
sha2 = { workspace = true }
# Real post-quantum STH signing (M1). FIPS 205 SLH-DSA; no_std, heap-free verify
# (clean wasm32 verifier). Maintained + vector-tested, NOT independently audited.
fips205 = "0.4.0"
