[package]
name = "pqtl-wasm"
version = "0.0.0"
edition.workspace = true
license.workspace = true
description = "Client-side receipt verifier compiled to WebAssembly (RNG-free, browser/Node)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Verify-only build of the core: no rng feature → no getrandom → clean wasm32.
pqtl-core = { path = "../pqtl-core", default-features = false, features = ["serde"] }
wasm-bindgen = "0.2"
serde_json = "1"
hex = "0.4"
